--- a/mysql/conf.d/my.cnf
+++ b/mysql/conf.d/my.cnf
@@ -17,3 +17,12 @@ skip_slave_start=1
 # enabled by default in 8.0
 #innodb_flush_log_at_trx_commit=1
 #sync_binlog=1
+
+#audit log
+## https://www.cnblogs.com/wclwcw/p/6933294.html
+server_audit_events='CONNECT,QUERY,TABLE,QUERY_DDL,QUERY_DML,QUERY_DCL'
+server_audit_logging=on
+server_audit_file_path =/data/mysql/auditlogs/
+server_audit_file_rotate_size=20000000
+server_audit_file_rotations=10
+server_audit_file_rotate_now=ON
